# study_reactor_1_0

./: .clang-format  .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_install.cmake  compile_commands.json  example_reactor_client  example_reactor_server  tatus
applications/example_1/: Acceptor.cpp  Acceptor.hpp  Client.cpp  Client.hpp  MainClient.cpp  MainServer.cpp  SampleEventHandler.cpp  SampleEventHandler.hpp  Server.cpp  Server.hpp  ServerEventHandler.cpp  ServerEventHandler.hpp
applications/example_acceptor_connector/: AcceptorImpl.cpp  AcceptorImpl.hpp  Client.cpp  Client.hpp  ConnectorImpl.cpp  ConnectorImpl.hpp  ExAcceptor.cpp  ExAcceptor.hpp  ExConnector.cpp  ExConnector.hpp  InputHandler.cpp  InputHandler.hpp  MainClient.cpp  MainServer.cpp  OutputHandler.cpp  OutputHandler.hpp
applications/example_active_object/: ActObjAcceptor.cpp  ActObjAcceptor.hpp  ActObjClient.cpp  ActObjClient.hpp  ActObjMain.cpp  ActObjMain.hpp  ActObjMethodCallback.cpp  ActObjMethodCallback.hpp  ActObjMethodRequests.cpp  ActObjMethodRequests.hpp  ActObjScheduler.cpp  ActObjScheduler.hpp  ActObjServant.cpp  ActObjServant.hpp  ActObjServantProxy.cpp  ActObjServantProxy.hpp  MainClient.cpp  MainServer.cpp
applications/example_half-sync_half-async/: Acceptor.cpp  Acceptor.hpp  AsyncService.cpp  AsyncService.hpp  HalfAsyncHandler.cpp  HalfAsyncHandler.hpp  HalfSyncHandler.cpp  HalfSyncHandler.hpp  MainServer.cpp  SyncService.cpp  SyncService.hpp
applications/example_proactor/: Acceptor.cpp  Acceptor.hpp  MainServer.cpp  ServerEventHandler.cpp  ServerEventHandler.hpp  ServerEventHandlerOld.cpp  ServerEventHandlerOld.hpp
applications/example_reactor/: Acceptor.cpp  Acceptor.hpp  MainServer.cpp  ServerEventHandler.cpp  ServerEventHandler.hpp
applications/samples/: MainClientAsync.cpp
docs/design/: ARCH_Active_Object_framework_and_application.md  ARCH_Asynchronous_Completion_Token_and_application.md  ARCH_Proactor_framework_and_application.md
docs/workflow/copilot/2025_12_26_DesignDoc_ActiveObject/: Tech_Spec.md
docs/workflow/copilot/2026_01_25_Design_Document_ACT/: Tech_Spec.md
docs/workflow/copilot/2026_01_25_Design_Document_Proactor/: Tech_Spec.md
docs/workflow/template/: Tech_Spec.md
framework/acceptor_connector/1_0/: Acceptor.cpp  Acceptor.hpp  Config.hpp  Connector.cpp  Connector.hpp  ServiceHandler.cpp  ServiceHandler.hpp  SockAcceptor.cpp  SockAcceptor.hpp  SockConnector.cpp  SockConnector.hpp  SockStream.cpp  SockStream.hpp
framework/active_object/1_0/: ActivationQueue.cpp  ActivationQueue.hpp  Future.cpp  Future.hpp  MethodRequest hpp  MethodRequest.cpp  MethodRequest.hpp
framework/proactor/1_0/: AsynchOperation.cpp  AsynchOperation.hpp  AsynchPseudoTask.cpp  AsynchPseudoTask.hpp  AsynchReadStream.cpp  AsynchReadStream.hpp  AsynchResult.cpp  AsynchResult.hpp  AsynchWriteStream.cpp  AsynchWriteStream.hpp  Handler.cpp  Handler.hpp  NotifyPipeManager.cpp  NotifyPipeManager.hpp  Proactor.cpp  Proactor.hpp  ServiceHandler.cpp  ServiceHandler.hpp
framework/reactor/1_0/: EventHandler.cpp  EventHandler.hpp  Reactor.cpp  Reactor.hpp
framework/task/1_0/: Task.cpp  Task.hpp
framework/v_1_0/: EventHandler.cpp  EventHandler.hpp  Reactor.cpp  Reactor.hpp
framework/v_1_1/: Acceptor.cpp  Acceptor.hpp  Config.hpp  Connector.cpp  Connector.hpp  EventHandler.cpp  EventHandler.hpp  Reactor.cpp  Reactor.hpp  ServiceHandler.cpp  ServiceHandler.hpp  ServicecHandler.cpp  ServicecHandler.hpp  SockAcceptor.cpp  SockAcceptor.hpp  SockConnector.cpp  SockConnector.hpp  SockStream.cpp  SockStream.hpp
framework/v_2_0/: EventHandler.cpp  EventHandler.hpp  Reactor.cpp  Reactor.hpp
v_1_0/: EventHandler.hpp  Reactor.cpp  Reactor.hpp
